# CTG-Manager

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: channel_resolver.h  client_manager.h  config.h  media_handler.h  restricted_channel_forwarder.h  utils.h  version.h
src/: channel_resolver.cpp  client_manager.cpp  config.cpp  main.cpp  media_handler.cpp  restricted_channel_forwarder.cpp  utils.cpp
